[tool.poetry]
name = "thistle-gulch"
version = "0.1.0"
description = "Python SDK for Thistle Gulch"
authors = ["Frank Carey <fcarey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = "^5.11.1"
cattrs = "^23.2.3"
aiohttp = "^3.9.3"
fable-saga = {git = "https://github.com/fablestudio/fable-saga.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
