[tool.poetry]
name = "thistle-gulch"
version = "0.1.0"
description = "Python SDK for Thistle Gulch"
authors = ["Frank Carey <fcarey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = "^5.11.1"
cattrs = "^23.2.3"
aiohttp = "^3.9.3"
fable-saga = { git = "https://github.com/fablestudio/fable-saga.git", rev = "main" }
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
pytest = "^7.3.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.9.0"
black = "^24.3.0"

[tool.poetry.group.anthropic.dependencies]
# Required to run the claude3 demo.
langchain-anthropic = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | stubs
  )/
  | poetry.lock
  | pyproject.toml
)
'''
